js262/test/language/module-code/parse-err-decl-pos-export-function-decl.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

function f() { export default null; }
